--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -5,6 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100vh;
+  background: #e8e8e8;
 }
 
 code {
